--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "classnames-styled",
+  "version": "1.0.11",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
     "url": "https://github.com/richard-unterberg/classnames-styled.git"
   },
   "license": "MIT",
-  "version": "1.0.10",
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "npm run build-all",
-    "build-all": "tsc && tsc -p tsconfig.esm.json"
+    "build-all": "tsc && tsc -p tsconfig.esm.json",
+    "publish": "npm run build && npm publish --access public"
   },
   "files": [
     "dist/**/*"
