--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "classnames-styled",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "npm run build-all",
     "build-all": "tsc && tsc -p tsconfig.esm.json",
-    "package": "npm run build && npm publish --access public"
+    "package": "npm run build && npm publish"
   },
   "files": [
     "dist/**/*"
