--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-styled-classnames",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
   ],
   "peerDependencies": {
     "clsx": "^1.2.1",
-    "react": "^18.3.1"
+    "react": ">=17.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.11"
