--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-dynamic-classname",
-  "version": "0.0.6",
+  "name": "react-dynamic-classnames",
+  "version": "0.0.2",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
-    "url": "https://github.com/richard-unterberg/react-dynamic-classname"
+    "url": "https://github.com/richard-unterberg/react-dynamic-classnames.git"
   },
   "license": "MIT",
   "type": "module",
