--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-dynamic-classnames",
-  "version": "0.0.26",
+  "name": "react-styled-classnames",
+  "version": "0.0.27",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
-    "url": "https://github.com/richard-unterberg/react-dynamic-classnames.git"
+    "url": "https://github.com/richard-unterberg/react-styled-classnames.git"
   },
   "keywords": [
     "react",
