--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-styled-classnames",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -26,11 +26,14 @@
     "import": "./dist/esm/index.js",
     "require": "./dist/cjs/index.js"
   },
-"scripts": {
-  "build": "npm run build-all",
-  "build-all": "tsc && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
-  "package": "npm run build && npm publish --access public"
-},
+  "scripts": {
+    "build": "npm run build-all",
+    "build-all": "rm -rf dist && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json && npm run delete-debris",
+    "delete-debris": "npx tsx build/delete-debris.ts",
+    "package": "npm run build && npm publish --access public",
+    "test": "jest",
+    "type-test": "tsd"
+  },
   "files": [
     "dist/**/*"
   ],
@@ -39,6 +42,16 @@
     "react": ">=17.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.11"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.11",
+    "eslint": "^9.16.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
+    "tsd": "^0.31.2",
+    "tsx": "^4.19.2"
   }
 }
