📝 add desc for npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-styled-classnames",
-  "version": "0.1.12",
+  "description": "Like styled-components for React element classnames. 🦭",
+  "version": "0.1.13",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
