--- a/package.json
+++ b/package.json
@@ -23,38 +23,54 @@
   ],
   "license": "MIT",
   "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "exports": {
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.js"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./v1": {
+      "import": "./dist/v1/index.js",
+      "require": "./dist/v1/index.js",
+      "types": "./dist/v1/index.d.ts"
+    }
   },
   "scripts": {
-    "build": "npm run build-all",
-    "build-all": "rm -rf dist && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
-    "package": "npm run build && npm publish --access public",
+    "clean": "rm -rf dist",
+    "types": "tsc",
+    "bundle": "rollup -c",
+    "build": "npm run clean && npm run types && npm run bundle",
     "test": "jest",
-    "type-test": "tsd"
+    "type-test": "tsd",
+    "package": "npm run build && npm publish --access public"
   },
-  "files": [
-    "dist/**/*"
-  ],
   "peerDependencies": {
     "clsx": "^1.2.1",
     "react": ">=17.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.11",
-    "eslint": "^9.16.0",
+    "eslint": "^9.17.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.2",
+    "rollup": "^4.28.1",
+    "rollup-plugin-dts": "^6.1.1",
     "ts-jest": "^29.2.5",
     "tsd": "^0.31.2",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
