--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-styled-classnames",
   "description": "A utility-first CSS tool for managing component class names with the simplicity of styled-components. 🦭",
-  "version": "0.1.22",
+  "version": "0.1.23",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "npm run test && npm run clean && npm run types && npm run bundle",
+    "build": "npm run clean && npm run types && npm run bundle && npm run test",
     "package": "npm run build && npm publish --access public",
     "test": "jest",
     "clean": "rm -rf dist",
@@ -32,7 +32,7 @@
     "bundle": "rollup -c",
     "type-test": "tsd"
   },
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -40,34 +40,33 @@
   ],
   "exports": {
     ".": {
+      "require": "./dist/index.cjs.js",
       "import": "./dist/index.js",
-      "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    },
-    "./v1": {
-      "import": "./dist/v1/index.js",
-      "require": "./dist/v1/index.js",
-      "types": "./dist/v1/index.d.ts"
     }
   },
   "peerDependencies": {
-    "clsx": "^1.2.1",
     "react": ">=17.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-typescript": "^12.1.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.11",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.17.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.2",
     "rollup": "^4.28.1",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild-minify": "^1.2.0",
     "ts-jest": "^29.2.5",
     "tsd": "^0.31.2",
     "tsx": "^4.19.2",
