--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-styled-classnames",
-  "description": "A utility-first CSS tool for managing component class names with the simplicity of styled-components. 🦭",
-  "version": "0.1.29",
+  "description": "A tool for managing react component class names with the simplicity of styled-components. 🦭",
+  "version": "0.1.30",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -45,7 +45,7 @@
     }
   },
   "peerDependencies": {
-    "react": ">=17.0.0"
+    "react": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -65,7 +65,6 @@
     "prettier": "^3.4.2",
     "rollup": "^4.28.1",
     "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-esbuild-minify": "^1.2.0",
     "ts-jest": "^29.2.5",
     "tsd": "^0.31.2",
     "tsx": "^4.19.2",
