--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-styled-classnames",
-  "description": "A tool for managing react component class names with the simplicity of styled-components. 🦭",
-  "version": "0.1.30",
+  "description": "A tool for managing react component class names and variants with the simplicity of styled-components. 🦭",
+  "version": "0.2.0",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@eslint/js": "^9.17.0",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -65,9 +66,11 @@
     "prettier": "^3.4.2",
     "rollup": "^4.28.1",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild-minify": "^1.2.0",
     "ts-jest": "^29.2.5",
     "tsd": "^0.31.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1"
   }
 }
