--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "npm run clean && npm run types && npm run bundle && npm run test",
+    "build": "npm run clean && npm run bundle && npm run rm-types && npm run test",
     "package": "npm run build && npm publish --access public",
     "test": "jest",
     "clean": "rm -rf dist",
-    "types": "tsc",
+    "rm-types": "rm -rf dist/types",
     "bundle": "rollup -c"
   },
   "main": "./dist/index.cjs.js",
@@ -56,6 +56,7 @@
     "@eslint/js": "^9.17.0",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
@@ -66,6 +67,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.2",
     "rollup": "^4.28.1",
+    "rollup-plugin-delete": "^2.1.0",
+    "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild-minify": "^1.2.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
