--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-styled-classnames",
   "description": "A tool for managing react component class names and variants with the simplicity of styled-components. 🦭",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -54,6 +54,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.17.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.2",
@@ -72,6 +73,7 @@
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1"
+    "typescript-eslint": "^8.18.1",
+    "tslib": "^2.8.1"
   }
 }
