🔥 rm rollup minify

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-styled-classnames",
   "description": "A tool for managing react component class names and variants with the simplicity of styled-components. 🦭",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -69,11 +69,10 @@
     "prettier": "^3.4.2",
     "rollup": "^4.28.1",
     "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-esbuild-minify": "^1.2.0",
     "ts-jest": "^29.2.5",
+    "tslib": "^2.8.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1",
-    "tslib": "^2.8.1"
+    "typescript-eslint": "^8.18.1"
   }
 }
