--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "module": "ESNext",
     "target": "ESNext",
     "strict": true,
-    "moduleResolution": "bundler",
+    "outDir": "./dist",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "skipLibCheck": true,
   },
