--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-styled-classnames",
   "description": "A tool for managing react component class names and variants with the simplicity of styled-components. 🦭",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -25,11 +25,11 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "npm run clean && npm run bundle && npm run rm-types && npm run test",
+    "build": "npm run clean && npm run bundle && npm run postbuild && npm run test",
     "package": "npm run build && npm publish --access public",
+    "postbuild": "node postbuild.js",
     "test": "jest",
     "clean": "rm -rf dist",
-    "rm-types": "rm -rf dist/types",
     "bundle": "rollup -c"
   },
   "main": "./dist/index.cjs.js",
