--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "react-styled-classnames",
+  "name": "react-classmate",
   "description": "A tool for managing react component class names and variants with the simplicity of styled-components. 🦭",
-  "version": "0.2.18",
+  "version": "1.0.0",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/richard-unterberg/react-styled-classnames.git"
+    "url": "git+https://github.com/richard-unterberg/react-classmate.git"
   },
   "keywords": [
     "react",
+    "classmate",
     "typescript",
     "dynamic-classnames",
     "utility-first",
