--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-classmate",
-  "description": "A tool for managing react component class names and variants with the simplicity of styled-components. 🦭",
-  "version": "1.0.6",
+  "description": "A tool for managing React component class names with the simplicity of styled-components and cva. Designed and tested for use with utility-first CSS libraries and SSR/SSG frameworks.",
+  "version": "1.0.7",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -54,8 +54,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@eslint/js": "^9.17.0",
-    "@rollup/plugin-babel": "^6.0.4",
+    "@biomejs/biome": "1.9.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.2",
@@ -64,7 +63,6 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.16",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.17.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.2",
@@ -73,7 +71,6 @@
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1"
+    "typescript": "^5.7.2"
   }
 }
