--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-classmate",
   "description": "A tool for managing React component class names with the simplicity of styled-components and cva. Designed and tested for use with utility-first CSS libraries and SSR/SSG frameworks.",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -73,6 +73,7 @@
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "@rollup/plugin-babel": "^6.0.4"
   }
 }
