--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-classmate",
-  "description": "A tool for managing React component class names with the simplicity of styled-components and cva. Designed and tested for use with utility-first CSS libraries and SSR/SSG frameworks.",
-  "version": "1.0.9",
+  "description": "A tool for managing react component class names, variants and styles",
+  "version": "1.0.10",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -12,9 +12,13 @@
     "classmate",
     "typescript",
     "dynamic-classnames",
+    "dynamic-styles",
+    "dynamic-variants",
+    "css",
+    "css-in-js",
     "utility-first",
     "utility-first-classnames",
-    "classnames",
+    "classname",
     "classname-variants",
     "frontend",
     "nextjs",
