--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/richard-unterberg/react-classmate.git"
   },
+  "workspaces": ["docs"],
   "keywords": [
     "react",
     "classmate",
@@ -34,7 +35,11 @@
     "test": "jest",
     "clean": "rm -rf dist",
     "lefthook": "lefthook install",
-    "bundle": "rollup -c"
+    "bundle": "rollup -c",
+    "========= Docs": "",
+    "docs": "cd docs/ && npm run dev",
+    "docs:build": "cd docs/ && npm run build",
+    "docs:preview": "cd docs/ && npm run preview"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
@@ -45,8 +50,7 @@
   "exports": {
     ".": {
       "require": "./dist/index.cjs.js",
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/index.js"
     }
   },
   "peerDependencies": {
@@ -65,7 +69,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.16",
+    "@types/react": "^19.0.2 ",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
