--- a/docs/package.json
+++ b/docs/package.json
@@ -5,24 +5,30 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "prod": "vite build && vite preview",
     "preview": "vite preview",
     "lint": "biome lint --write .",
     "format": "biome format --write ."
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "lucide-react": "^0.469.0",
     "react": "^19.0.0",
-    "react-classmate": "^1.0.13",
+    "react-classmate": "file:../.localPack",
     "react-dom": "^19.0.0",
-    "unocss-preset-theme": "^0.14.1",
+    "react-syntax-highlighter": "^15.6.1",
     "vike-react": "^0.5.10",
+    "vite-raw-plugin": "^1.0.2",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "typescript": "^5.7.2",
     "unocss": "^0.65.3",
+    "unocss-preset-animations": "^1.1.0",
+    "unocss-preset-theme": "^0.14.1",
     "vike": "^0.4.210",
     "vite": "^6.0.5"
   },
