--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "========= Root": "",
+    "clean": "rm -rf dist",
+    "lefthook": "lefthook install",
+    "========= Lib": "",
     "build": "npm run lefthook && npm run clean && npm run bundle && npm run postbuild && npm run test",
     "package": "npm run build && npm publish --access public",
     "postbuild": "npx tsx postbuild.ts",
-    "test": "jest",
-    "clean": "rm -rf dist",
-    "lefthook": "lefthook install",
     "bundle": "rollup -c",
+    "========= Test": "",
+    "test": "jest",
     "========= Docs": "",
     "docs": "cd docs/ && npm run dev",
     "docs:prod": "cd docs/ && npm run build && npm run preview",
