✨ add playwright for docs test

--- a/package.json
+++ b/package.json
@@ -31,21 +31,29 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "========= Root": "",
+    "========= Root Actions": "",
     "clean": "rm -rf dist",
     "lefthook": "lefthook install",
+    "playwright": "npx playwright install",
+    "========= Test": "",
+    "test": "npm run test-clear && npm run build:all && npm run test:src && npm run test:docs",
+    "test-clear": "jest --clearCache",
+    "test:docs": "playwright test",
+    "test:docs-ui": "npm run docs:build && playwright test --ui",
+    "test:src": "jest --testPathPattern=test/src",
     "========= Lib": "",
-    "build": "npm run lefthook && npm run clean && npm run bundle && npm run postbuild && npm run test",
+    "build:base": "npm run clean && npm run bundle && npm run test:src",
+    "build": "npm run build:base && npm run postbuild ",
+    "build:prepack": "npm run build:base && npm run postbuild:prepack",
     "package": "npm run build && npm publish --access public",
     "postbuild": "npx tsx postbuild.ts",
+    "postbuild:prepack": "cross-env MODE=prepack npx tsx postbuild.ts",
     "bundle": "rollup -c",
-    "========= Test": "",
-    "test": "jest",
     "========= Docs": "",
-    "docs": "cd docs/ && npm run dev",
-    "docs:prod": "cd docs/ && npm run build && npm run preview",
-    "docs:build": "cd docs/ && npm run build",
-    "docs:preview": "cd docs/ && npm run preview"
+    "docs:build": "cd docs/ && vite build && cd .. && npm run test:docs",
+    "docs": "cd docs/ && vite",
+    "docs:prod": "cd docs/ && vite build && vite preview",
+    "docs:preview": "cd docs/ && vite preview"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
@@ -68,6 +76,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@biomejs/biome": "1.9.4",
+    "@playwright/test": "^1.49.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
@@ -77,9 +86,11 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.2 ",
     "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lefthook": "^1.10.1",
+    "playwright": "^1.49.1",
     "rollup": "^4.29.1",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild-minify": "^1.2.0",
