--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild-minify": "^1.2.0",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "ts-node": "^10.9.2"
+    "typescript": "^5.7.2"
   }
 }
