--- a/biome.json
+++ b/biome.json
@@ -3,11 +3,11 @@
   "vcs": {
     "enabled": false,
     "clientKind": "git",
-    "useIgnoreFile": false
+    "useIgnoreFile": true
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["dist/", ".localPack/", "package.json"]
+    "ignore": ["dist", ".localPack", "node_modules", "package.json"]
   },
   "formatter": {
     "enabled": true,
@@ -27,7 +27,7 @@
         "noExplicitAny": "warn"
       }
     },
-    "ignore": ["dist/", ".localPack", "package.json"]
+    "ignore": ["dist", ".localPack", "node_modules", "package.json"]
   },
   "javascript": {
     "formatter": {
