--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "moduleResolution": "Bundler",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "rootDir": "."
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", ".localPack", "docs"]
