--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-classmate",
   "description": "A tool for managing react component class names, variants and styles",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "author": "https://github.com/richard-unterberg",
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
   ],
   "license": "MIT",
   "type": "module",
+  "sideEffects": false,
   "scripts": {
     "========= Root Actions": "",
     "clean": "rm -rf dist",
@@ -77,7 +78,6 @@
     "@babel/preset-typescript": "^7.26.0",
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "^1.49.1",
-    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-typescript": "^12.1.2",
