✨ check build, back to localPack for docs

--- a/package.json
+++ b/package.json
@@ -38,16 +38,17 @@
     "playwright": "npx playwright install",
     "========= Test": "",
     "test-clear": "jest --clearCache",
-    "test:all": "npm run test-clear && npm run build && npm run docs:build && npm run test:src && npm run test:docs",
-    "test:docs": "playwright test ./test/docs",
-    "test:docs-ui": "playwright test ./test/docs --ui",
+    "test:all": "npm run test-clear && npm run test:src && npm run test:docs",
+    "prepareE2": "npm run packLocal && cd docs && npm i ../.localPack && cd ..",
+    "test:docs": "npm run prepareE2 && playwright test ./test/docs",
+    "test:docs-ui": "npm run prepareE2 && playwright test ./test/docs --ui",
     "test:src": "jest --testPathPattern=test/src",
     "========= Lib": "",
     "build:base": "npm run clean && npm run bundle",
     "build": "npm run build:base && npm run postbuild",
     "packLocal": "npm run build:base && npm run postbuild:packLocal",
     "package": "npm run build && npm publish",
-    "postbuild": "npx tsx postbuild.ts",
+    "postbuild": "npx tsx scripts/postbuild.ts",
     "postbuild:packLocal": "cross-env MODE=packLocal npx tsx postbuild.ts",
     "bundle": "rollup -c",
     "========= Docs": "",
@@ -78,6 +79,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "^1.49.1",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-typescript": "^12.1.2",
@@ -86,6 +88,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.2 ",
     "babel-jest": "^29.7.0",
+    "camelcase": "^8.0.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
