--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
     "build": "npm run build:base && npm run postbuild",
     "packLocal": "npm run build:base && npm run postbuild:packLocal",
     "package": "npm run build && npm publish",
-    "postbuild": "npx tsx scripts/postbuild.ts",
+    "postbuild": "npx tsx postbuild.ts",
     "postbuild:packLocal": "cross-env MODE=packLocal npx tsx postbuild.ts",
     "bundle": "rollup -c",
     "========= Docs": "",
-    "docs:build": "cd docs/ && vike build",
+    "docs:build": "npm run packLocal && cd docs/ && vike build",
     "docs": "cd docs/ && vike dev",
-    "docs:prod": "cd docs/ && vike build && vike preview",
-    "docs:preview": "cd docs/ && vike preview"
+    "docs:prod": "npm run docs:build && cd docs/ && vike preview",
+    "docs:preview": "cd docs/ && vike preview",
+    "docs:publish": "cd docs/ && npm remove react-classmate && npm remove ../.localPack && npm i react-classmate && vike build"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
@@ -88,7 +89,6 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.2 ",
     "babel-jest": "^29.7.0",
-    "camelcase": "^8.0.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
