--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,37 @@
-name: Deploy
+name: Deploy Documentation
 
 on:
   push:
     branches:
-      - master
+      - master # Change to 'main' if that's your default branch
 
 jobs:
-  build:
-    name: Build
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "22"
+          node-version: "18" # Use a stable LTS version
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+      - name: Install Dependencies
+        run: npm install
+        # If you prefer using Yarn, replace with:
+        # run: yarn install
 
-      - name: Build project
+      - name: Build Documentation
         run: npm run docs:publish
-
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v3
-        with:
-          name: production-files
-          path: ./docs/dist/client
-
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: production-files
-          path: ./dist
+        # Ensure that 'docs:publish' correctly builds your documentation to 'docs/dist/client'
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./docs/dist/client # Adjust if your build output path is different
+          # Optional: Specify the publish branch if different from 'gh-pages'
+          # publish_branch: gh-pages
