--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A tool for managing react component class names, variants and styles",
   "version": "1.0.19",
   "author": "https://github.com/richard-unterberg",
+  "homepage": "https://richard-unterberg.github.io/react-classmate/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/richard-unterberg/react-classmate.git"
@@ -56,6 +57,7 @@
     "docs": "cd docs/ && vike dev",
     "docs:prod": "npm run docs:build && cd docs/ && vike preview",
     "docs:preview": "cd docs/ && vike preview",
+    "========= Make sure we always use a fresh react-classmate for github pages": "",
     "docs:publish": "cd docs/ && npm remove react-classmate && npm remove ../.localPack && npm i react-classmate && vike build"
   },
   "main": "./dist/index.cjs.js",
