--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "description": "A tool for managing react component class names, variants and styles",
   "version": "1.0.19",
   "author": "https://github.com/richard-unterberg",
-  "homepage": "https://richard-unterberg.github.io/react-classmate/",
+  "homepage": "https://unterberg-dev.github.io/react-classmate/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/richard-unterberg/react-classmate.git"
+    "url": "git+https://github.com/unterberg-dev/react-classmate.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "workspaces": [
     "docs"
