🐛 streamline lib build

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
     "indentWidth": 2,
     "indentStyle": "space",
     "lineWidth": 110,
-    "lineEnding": "lf"
+    "lineEnding": "lf",
+    "ignore": ["dist", ".localPack", "node_modules", "package.json"]
   },
   "organizeImports": {
     "enabled": true
