--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
   "scripts": {
     "========= Root Actions": "",
     "clean": "rm -rf dist",
+    "clean:all": "rm -rf dist && rm -rf .localPack && rm -rf node_modules",
     "lefthook": "lefthook install",
     "playwright": "npx playwright install",
     "========= Test": "",
     "test-clear": "jest --clearCache",
     "test:all": "npm run test-clear && npm run test:src && npm run test:docs",
-    "prepareE2": "npm run packLocal && cd docs && npm i ../.localPack && cd ..",
-    "test:docs": "npm run prepareE2 && playwright test ./test/docs",
-    "test:docs-ui": "npm run prepareE2 && playwright test ./test/docs --ui",
+    "prepareE2E": "npm run packLocal && cd docs && npm i ../.localPack && cd ..",
+    "test:docs": "npm run prepareE2E && playwright test ./test/docs",
+    "test:docs-ui": "npm run prepareE2E && playwright test ./test/docs --ui",
     "test:src": "jest --testPathPattern=test/src",
     "========= Lib": "",
     "build:base": "npm run clean && npm run bundle",
@@ -83,8 +84,6 @@
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "^1.49.1",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^28.0.2",
-    "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
