--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "clean:all": "rm -rf dist && rm -rf .localPack && rm -rf node_modules",
     "lefthook": "lefthook install",
     "playwright": "npx playwright install",
+    "prepareE2E": "npm run packLocal && cd docs && npm i ../.localPack && cd ..",
     "========= Test": "",
     "test-clear": "jest --clearCache",
     "test:all": "npm run test-clear && npm run test:src && npm run test:docs",
-    "prepareE2E": "npm run packLocal && cd docs && npm i ../.localPack && cd ..",
     "test:docs": "npm run prepareE2E && playwright test ./test/docs",
     "test:docs-ui": "npm run prepareE2E && playwright test ./test/docs --ui",
-    "test:src": "jest --testPathPattern=test/src",
+    "test:src": "npm run build && jest --testPathPattern=test/src",
     "========= Lib": "",
     "build:base": "npm run clean && npm run bundle",
     "build": "npm run build:base && npm run postbuild",
@@ -54,12 +54,12 @@
     "postbuild:packLocal": "cross-env MODE=packLocal npx tsx postbuild.ts",
     "bundle": "rollup -c",
     "========= Docs": "",
-    "docs:build": "npm run packLocal && cd docs/ && vike build",
+    "docs:build": "cd docs/ && vike build",
     "docs": "cd docs/ && vike dev",
     "docs:prod": "npm run docs:build && cd docs/ && vike preview",
     "docs:preview": "cd docs/ && vike preview",
-    "========= Make sure we always use a fresh react-classmate for github pages": "",
-    "docs:publish": "cd docs/ && npm remove react-classmate && npm i react-classmate && npm i && vike build"
+    "========= gh-pages": "",
+    "docs:publish": "npm run docs:build"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
