--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.30.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
