--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: cd docs && npm install
 
       - name: Build Documentation
-        run: cd .. && npm run docs:publish
+        run: npm run docs:publish
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
