--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "postbuild:packLocal": "cross-env MODE=packLocal npx tsx postbuild.ts",
     "bundle": "rollup -c",
     "========= Docs": "",
-    "docs:build": "cd docs/ && vike build",
-    "docs": "cd docs/ && vike dev",
-    "docs:prod": "npm run docs:build && cd docs/ && vike preview",
-    "docs:preview": "cd docs/ && vike preview",
+    "docs:build": "cd docs/ && npm run build",
+    "docs": "cd docs/ && npm run dev",
+    "docs:prod": "npm run docs:build && npm run docs:preview",
+    "docs:preview": "cd docs/ && npm run preview",
     "========= gh-pages": "",
     "docs:publish": "npm run docs:build"
   },
