--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["src", "postbuild.ts"],
   "exclude": ["node_modules", "dist", ".localPack", "docs"]
 }
