--- a/docs/package.json
+++ b/docs/package.json
@@ -23,11 +23,14 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "beasties": "^0.2.0",
+    "jsdom": "^26.0.0",
+    "p-limit": "^6.2.0",
     "typescript": "^5.7.2",
     "unocss": "^65.4.2",
     "unocss-preset-animations": "^1.1.1",
