--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,28 +14,33 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Get npm cache directory path
+        id: npm-cache-dir-path
+        run: |
+          echo "::set-output name=dir::$(npm cache dir)"
+          echo "::set-output name=version::$(npm -v)"
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-
-      # - name: Cache NPM Cache
-      #   id: cache-npm-cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-npm-cache-
+          cache: "npm"
 
       - name: Cache node_modules
-        id: cache-node-modules
+        id: cache-npm
         uses: actions/cache@v3
         with:
-          path: docs/node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          path: |
+            **/node_modules
+            ${{ steps.npm-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-npm-${{ steps.npm-cache-dir-path.outputs.version }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-modules-
+
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: cd docs && npm list
 
       - name: Install Dependencies
         run: |
