--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: "18"
 
-      - name: Cache node_modules
+      - name: Install Dependencies & Cache node_modules
         id: cache-nodemodules
         uses: actions/cache@v3
         with:
@@ -31,12 +31,7 @@ jobs:
       - if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
         name: List the state of node modules
         continue-on-error: true
-        run: cd docs && npm list
-
-      - name: Install Dependencies
-        run: |
-          cd docs
-          npm install
+        run: cd docs && npm install && npm list
 
       - name: List node_modules (for debugging)
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
