--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,11 @@ jobs:
       - if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
         name: List the state of node modules
         continue-on-error: true
-        run: cd docs && npm install && npm list
+        run: cd docs && npm install
 
       - name: List node_modules (for debugging)
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        continue-on-error: true
         run: |
           echo "Listing node_modules as cache was not hit:"
           ls -la docs/node_modules
